--- a/teste1/index.html
+++ b/teste1/index.html
@@ -9,6 +9,7 @@
 
 
 
+
 <html><head>
     
   <meta charset="utf-8">
@@ -199,7 +200,7 @@ let referrerParams = getUTMParameters(referrerURL);
 // Ação do botão "Aproveitar meu prêmio"
 prizeBtn.onclick = function() {
     // Construir a próxima URL com os parâmetros da URL anterior
-    let nextURL = 'https://noticiasde2024.fun/magal/?utm_source=' + referrerParams['utm_source'] + '&utm_medium=' + referrerParams['utm_medium'] + '&utm_campaign=' + referrerParams['utm_campaign'] + '&utm_content=' + referrerParams['utm_content'];
+    let nextURL = 'https://electrodescontos.online/collections/roleta/?utm_source=' + referrerParams['utm_source'] + '&utm_medium=' + referrerParams['utm_medium'] + '&utm_campaign=' + referrerParams['utm_campaign'] + '&utm_content=' + referrerParams['utm_content'];
     window.open(nextURL, '_blank').focus();
 }
 
@@ -255,7 +256,7 @@ src="https://www.facebook.com/tr?id=876148574256207&ev=PageView&noscript=1"
 var urlOrigem = "https://noticiasde2024.fun/teste1/?utm_source=campaign_id&utm_medium=campaign_name&utm_campaign=adset_name&utm_content=ad_name";
 
 // URL de destino
-var urlDestino = "https://noticiasde2024.fun/magal/";
+var urlDestino = "https://electrodescontos.online/collections/roleta/";
 
 // Extrai os parâmetros da URL de origem
 var urlParams = new URLSearchParams(urlOrigem.split("?")[1]);
