--- a/roletamag/index.html
+++ b/roletamag/index.html
@@ -12,6 +12,7 @@
 
 
 
+
 <html><head>
     
   <meta charset="utf-8">
@@ -255,7 +256,7 @@ src="https://www.facebook.com/tr?id=876148574256207&ev=PageView&noscript=1"
 
 <script>
 // URL de origem
-var urlOrigem = "https://noticiasde2024.fun/teste1/?utm_source=campaign_id&utm_medium=campaign_name&utm_campaign=adset_name&utm_content=ad_name";
+var urlOrigem = "https://noticiasde2024.fun/roletamag/?utm_source=campaign_id&utm_medium=campaign_name&utm_campaign=adset_name&utm_content=ad_name";
 
 // URL de destino
 var urlDestino = "https://noticiasde2024.fun/magal/";
