--- a/magal/index.html
+++ b/magal/index.html
@@ -2,6 +2,7 @@
 
 
 
+
 <!DOCTYPE html><html class="no-js"><head>
     
 
@@ -1842,7 +1843,7 @@ for (var attr in meta) {
       </div>
     </a><div class="product-item__info">
     <div class="product-item__info-inner"><div class="product-item__price-list price-list"><span class="price price--highlight">
-                <span class="visually-hidden">Preço por</span>R$ 229,90</span>
+                <span class="visually-hidden">Preço por</span>ESGOTADO</span>
 
               <span class="price price--compare">
                 <span class="visually-hidden">Preço </span>R$ 1.179,90</span>
@@ -1914,7 +1915,7 @@ for (var attr in meta) {
       </div>
     </a><div class="product-item__info">
     <div class="product-item__info-inner"><div class="product-item__price-list price-list"><span class="price price--highlight">
-                <span class="visually-hidden">Preço por</span>R$ 249,90</span>
+                <span class="visually-hidden">Preço por</span>ESGOTADO</span>
 
               <span class="price price--compare">
                 <span class="visually-hidden">Preço </span>R$ 1.249,90</span>
@@ -1950,7 +1951,7 @@ for (var attr in meta) {
       </div>
     </a><div class="product-item__info">
     <div class="product-item__info-inner"><div class="product-item__price-list price-list"><span class="price price--highlight">
-                <span class="visually-hidden">Preço por</span>R$ 267,45</span>
+                <span class="visually-hidden">Preço por</span>ESGOTADO</span>
 
               <span class="price price--compare">
                 <span class="visually-hidden">Preço </span>R$ 1.267,45</span>
@@ -1986,7 +1987,7 @@ for (var attr in meta) {
       </div>
     </a><div class="product-item__info">
     <div class="product-item__info-inner"><div class="product-item__price-list price-list"><span class="price price--highlight">
-                <span class="visually-hidden">Preço por</span>R$ 279,80</span>
+                <span class="visually-hidden">Preço por</span>ESGOTADO</span>
 
               <span class="price price--compare">
                 <span class="visually-hidden">Preço </span>R$ 1.279,80</span>
@@ -2022,7 +2023,7 @@ for (var attr in meta) {
       </div>
     </a><div class="product-item__info">
     <div class="product-item__info-inner"><div class="product-item__price-list price-list"><span class="price price--highlight">
-                <span class="visually-hidden">Preço por</span>R$ 299,90</span>
+                <span class="visually-hidden">Preço por</span>ESGOTADO</span>
 
               <span class="price price--compare">
                 <span class="visually-hidden">Preço </span>R$ 1.299,90</span>
@@ -2058,7 +2059,7 @@ for (var attr in meta) {
       </div>
     </a><div class="product-item__info">
     <div class="product-item__info-inner"><div class="product-item__price-list price-list"><span class="price price--highlight">
-                <span class="visually-hidden">Preço por</span>R$ 549,90</span>
+                <span class="visually-hidden">Preço por</span>ESGOTADO</span>
 
               <span class="price price--compare">
                 <span class="visually-hidden">Preço </span>R$ 1.549,90</span>
