--- a/index.html
+++ b/index.html
@@ -1868,10 +1868,10 @@ for (var attr in meta) {
       </div>
     </a><div class="product-item__info">
     <div class="product-item__info-inner"><div class="product-item__price-list price-list"><span class="price price--highlight">
-                <span class="visually-hidden">Preço por</span>ESGOTADO</span>
+                <span class="visually-hidden">Preço por</span>249,90</span>
 
               <span class="price price--compare">
-                <span class="visually-hidden">Preço </span>R$ 1.179,90</span>
+                <span class="visually-hidden">Preço </span>R$ 9.779,90</span>
 
           
             <div class="parcelamento" style="font-size:13px; margin-top: 0; margin-bottom: 10px">
