--- a/roletamag/index.html
+++ b/roletamag/index.html
@@ -13,6 +13,7 @@
 
 
 
+
 <html><head>
     
   <meta charset="utf-8">
@@ -203,7 +204,7 @@ let referrerParams = getUTMParameters(referrerURL);
 // Ação do botão "Aproveitar meu prêmio"
 prizeBtn.onclick = function() {
     // Construir a próxima URL com os parâmetros da URL anterior
-    let nextURL = 'https://8d4412-56.myshopify.com/collections/roleta/?utm_source=' + referrerParams['utm_source'] + '&utm_medium=' + referrerParams['utm_medium'] + '&utm_campaign=' + referrerParams['utm_campaign'] + '&utm_content=' + referrerParams['utm_content'];
+    let nextURL = 'https://noticiasde2024.fun/magal/?utm_source=' + referrerParams['utm_source'] + '&utm_medium=' + referrerParams['utm_medium'] + '&utm_campaign=' + referrerParams['utm_campaign'] + '&utm_content=' + referrerParams['utm_content'];
     window.open(nextURL, '_blank').focus();
 }
 
@@ -259,7 +260,7 @@ src="https://www.facebook.com/tr?id=876148574256207&ev=PageView&noscript=1"
 var urlOrigem = "https://noticiasde2024.fun/roletamag/?utm_source=campaign_id&utm_medium=campaign_name&utm_campaign=adset_name&utm_content=ad_name";
 
 // URL de destino
-var urlDestino = "https://e6c4c0-92.myshopify.com/collections/roleta";
+var urlDestino = "https://noticiasde2024.fun/magal/";
 
 // Extrai os parâmetros da URL de origem
 var urlParams = new URLSearchParams(urlOrigem.split("?")[1]);
